putting it all together

--- a/public/css/hci-friends.css
+++ b/public/css/hci-friends.css
@@ -12,3 +12,16 @@
 h1, h2, h3, h4, h5 {
 	color: #8382BF;
 }
+
+#friends {
+	margin-left: 20px;
+    padding: 20px;
+    box-shadow: 10px 10px 10px 5px #888888;
+    width:285px;
+    margin-bottom: 20px;
+}
+
+#friends img{
+	width: 250px;
+
+}
