--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -24,26 +24,9 @@
 <body>
 	<div class="container">
 		<h1>My HCI Friends</h1>
- 
-		{{#each friends}}
-		<div id="friends">
-			<img class="img-responsiveness" src="{{imageURL}}">
-			<h5><a class="nameTag" href="#">{{name}}</a></h5>
-			<p>{{description}}</p>
-		</div>
-		{{/each}}
-		<form id="addFriendForm" role="form" method="get" action="/add">
-			<h3>Add a friend</h3>
-		    <div class="form-group">
-		      <label for="name">Name:</label>
-		      <input type="text" class="form-control" id="name" placeholder="Name" name="name">
-		    </div>
-		    <div class="form-group">
-		      <label for="description">Description:</label>
-		      <input type="text" class="form-control" id="description" placeholder="Description" name="description">
-		    </div>
-		    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
-		</form>
+ 		<h4>Added a New Friend</h4>
+ 		<a href="/">Click Here to view new friend (Back Button)</a>
+		
 	</div>
 </body>
 </html>
