--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -25,7 +25,7 @@
 	<div class="container">
 		<h1>My HCI Friends</h1>
  		<h4>Added a New Friend</h4>
- 		<a href="/">Click Here to view new friend (Back Button)</a>
+ 		<a href="http://josephanz-lab5.herokuapp.com/">Click Here to view new friend (Back Button)</a>
 		
 	</div>
 </body>
